--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
+    "firebase": "^8.1.1",
     "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -52,7 +53,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "npm run lint",
+      "yarn  lint",
       "git add"
     ]
   },
